# teleop-ur

./: .gitignore  03 softhand控制.md  PROJECT_ANALYSIS.md  README.md  README_EN.md  requirements.txt  ros2_basic_commands.md  test.md
docs/: PROJECT_ANALYSIS.md  PROJECT_ANALYSIS_EN.md  QUEST3_WEBXR_VUER.md  QUEST3_WEBXR_VUER_EN.md  current_control_behavior_spec_v0.1.md  current_control_behavior_spec_v0.1_EN.md
docs/agent/: 00-current-state.md  01-todo.md  02-decisions.md  03-work-log.md  04-handoff.md
docs/guide/: 00-overview.md  01-architecture.md  02-runtime-boundaries.md  03-operation.md  04-control-flow.md  05-data-collection.md  06-inference.md  07-devices.md  08-configuration.md  09-maintenance.md  10-troubleshooting.md
scripts/: local_adb.sh  openpi_remote_probe.py  plot_action_smoothness.py  plot_action_trajectory_grid.py  plot_single_action_trajectory.py  rebuild_dataset_schema.py  teleop_gui.py  teleop_gui_home_override.yaml  test_hdf5.py  verify_joy_mapping.py
src/multi_joy_driver/: README.md  package.xml  setup.cfg  setup.py
src/multi_joy_driver/config/: joy_driver_params.yaml
src/multi_joy_driver/launch/: joy_driver.launch.py
src/multi_joy_driver/multi_joy_driver/: device_profiles.py  joy_driver_node.py
src/qbsofthand_control/: API_Usage_Guide.md  CMakeLists.txt  main.cpp  package.xml
src/qbsofthand_control/include/qbrobotics_research_api/qbrobotics_research_api/: qbrobotics_research_api.h  qbrobotics_research_commands.h  qbsofthand_research_api.h
src/qbsofthand_control/include/qbrobotics_research_api/serial/: serial.h
src/qbsofthand_control/libs/: README.txt
src/qbsofthand_control/src/: qbshr_node.cpp
src/qbsofthand_control/srv/: SetClosure.srv
src/teleop_control_py/: package.xml  setup.cfg  setup.py
src/teleop_control_py/config/: data_collector_params.yaml  gui_params.yaml  home_overrides.yaml  joy_driver_params.yaml  quest3_webxr_bridge_params.yaml  robot_commander_params.yaml  robot_profiles.yaml  teleop_params.yaml
src/teleop_control_py/launch/: control_system.launch.py  joy_driver.launch.py  quest3_webxr_bridge.launch.py  teleop_control.launch.py
src/teleop_control_py/resource/: teleop_control_py
src/teleop_control_py/teleop_control_py/: camera_client.py  data_collector_node.py  dataset_rebuilder.py  gripper_controllers.py  gui_support.py  hdf5_writer.py  home_zone_utils.py  input_handlers.py  model_inference.py  preview_api.py  robot_commander_node.py  servo_pose_follower.py  teleop_control_node.py  transform_utils.py  ur_kinematics.py
src/teleop_control_py/teleop_control_py/core/: __init__.py  control_coordinator.py  hardware_manager.py  inference_service.py  inference_worker.py  models.py  mux.py  openpi_remote_worker.py  orchestrator.py  process_manager.py  recorder.py  resource_manager.py  shm_registry.py  sync_hub.py  (+1 more)
test/: 123.py  test_gesture.py  test_oak_latency.py  test_quest3_orientation_math.py  view_depth.py
(+56 files in other folders)
