<?xml version="1.0"?>
<package format="3">
  <name>qbsofthand_control</name>
  <version>0.1.0</version>
  <description>ROS 2 package for interfacing with qbSoftHand API</description>

  <maintainer email="673269043@qq.com">Evil_Eyes</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>